--- a/package.json
+++ b/package.json
@@ -8,6 +8,19 @@
     "docs:build": "vuepress build docs"
   },
   "devDependencies": {
-    "vuepress": "^1.8.2"
-  }
+    "vuepress": "^1.9.10"
+  },
+  "directories": {
+    "doc": "docs"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/U0951/SRM_DOC0424.git"
+  },
+  "author": "",
+  "bugs": {
+    "url": "https://github.com/U0951/SRM_DOC0424/issues"
+  },
+  "homepage": "https://github.com/U0951/SRM_DOC0424#readme",
+  "description": ""
 }
